<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/androide"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.laguilera.cualquiera.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/boquita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dale Boquita!!!" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/editClave"
            android:layout_marginTop="43dp"
            android:contentDescription="Direccion EMail"
            android:ems="10"
            android:hint="tikras@outlook.com"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editClave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/checkBostero"
            android:layout_marginTop="25dp"
            android:contentDescription="Clave Numerica"
            android:ems="10"
            android:hint="1234"
            android:inputType="numberPassword"
            android:selectAllOnFocus="true" />

        <CheckBox
            android:id="@+id/checkBostero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="23dp"
            android:checked="false"
            android:text="@string/bostero" />


        <ImageView
            android:id="@+id/imageMarcaCumpleano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonConfirmar"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="43dp"
            app:srcCompat="@drawable/ic_cake_black_24dp" />

        <ImageView
            android:id="@+id/imageMarcaLibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageMarcaCumpleano"
            android:layout_marginBottom="47dp"
            app:srcCompat="@drawable/ic_bookmark_black_24dp" />

        <RatingBar
            android:id="@+id/calificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editEmail"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/imageMarcaLibro" />

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editClave"
            android:layout_alignBottom="@+id/editClave"
            android:layout_alignEnd="@+id/buttonConfirmar"
            android:contentDescription="Nombre"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:text="Nombre" />

        <EditText
            android:id="@+id/editNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/calificacion"
            android:layout_below="@+id/imageMarcaLibro"
            android:ems="10"
            android:hint="Nacimiento"
            android:inputType="date" />

        <QuickContactBadge
            android:id="@+id/quickContactBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editNombre"
            android:layout_below="@+id/editNombre"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/ic_memory_black_24dp" />

        <Button
            android:id="@+id/botonModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/botonConsultar"
            android:onClick="modificar"
            android:text="@string/modificar" />

        <Button
            android:id="@+id/botonAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/botonConsultar"
            android:layout_alignBottom="@+id/botonConsultar"
            android:layout_alignEnd="@+id/editNacimiento"
            android:onClick="alta"
            android:text="@string/agregar" />

        <Button
            android:id="@+id/botonBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/botonAgregar"
            android:onClick="borrar"
            android:text="@string/borrar" />

        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/botonModificar"
            android:layout_alignParentStart="true"
            android:onClick="consulta"
            android:text="@string/consultar" />

        <Button
            android:id="@+id/buttonConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/botonConsultar"
            android:layout_below="@+id/calificacion"
            android:layout_marginTop="18dp"
            android:text="@string/confirmar" />

    </LinearLayout>

</ScrollView>
